# rubikscube

./: .gitignore  Box.hpp  BoxCommon.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Colors.cpp  Colors.hpp  Cube.cpp  Cube.hpp  CubeFace.cpp  CubeFace.hpp  Debug.hpp  Face.hpp  Facing.hpp  File.hpp  LICENSE  Log.hpp  Logger.hpp  Makefile  Manipulation.hpp  Quad.cpp  Quad.hpp  QuadCommon.hpp  README.md  Rubiks.hpp  RubiksCube.hpp  Shader.cpp  Shader.hpp  ShaderAttrib.hpp  ShaderBuffer.hpp  ShaderProgram.hpp  ShaderUniform.hpp  Sprite.cpp  Sprite.hpp  Transformation.hpp  Triangle.cpp  Triangle.hpp  Tuple.hpp  VertexArray.hpp  (+15 more)
resources/: Info.plist  rubikscube.desktop  rubikscube.icns
shaders/: shader.frag  shader.geom  shader.vert
tools/: build_appimage  pngtoicns
